# proctree

./: .coverage  .gitignore  README.md  README_ja.md  THIRD_PARTY_LICENSES.md  pyproject.toml
src/proctree/: __init__.py  cli.py  detect.py  render.py  tree.py
src/proctree.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_proctree.py
